# SETestKCL

./: .gitignore  CMakeLists.txt  Main.cpp  MainPage.dox  README.md  doxygen.config.in
Doxygen/: BinomialCalculatorTest_8cxx.html  BinomialCalculatorTest_8cxx__incl.map  BinomialCalculatorTest_8cxx__incl.md5  BinomialCalculatorTest_8cxx_source.html  BinomialCalculator_8cpp.html  BinomialCalculator_8cpp__incl.map  BinomialCalculator_8cpp__incl.md5  BinomialCalculator_8cpp_source.html  BinomialCalculator_8h.html  BinomialCalculator_8h__dep__incl.map  BinomialCalculator_8h__dep__incl.md5  BinomialCalculator_8h__incl.map  BinomialCalculator_8h__incl.md5  BinomialCalculator_8h_source.html  MainPage_8dox.html  MainWindow_8cpp.html  MainWindow_8cpp__incl.map  MainWindow_8cpp__incl.md5  MainWindow_8cpp_source.html  MainWindow_8h.html  MainWindow_8h__dep__incl.map  MainWindow_8h__dep__incl.md5  MainWindow_8h__incl.map  MainWindow_8h__incl.md5  MainWindow_8h_source.html  Main_8cpp.html  Main_8cpp__incl.map  Main_8cpp__incl.md5  Main_8cpp_source.html  README_8md.html  README_8md_source.html  annotated.html  classBinomialCalculator-members.html  classBinomialCalculator.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.md5  classQCPAbstractItem-members.html  classQCPAbstractItem.html  classQCPAbstractItem__coll__graph.map  (+394 more)
Doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enums_8.js  enums_9.js  enums_a.js  enums_b.js  enums_c.js  enums_d.js  enums_e.js  (+58 more)
Testing/: BinomialCalculatorTest.cxx  CMakeLists.txt
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
gui/QtCustomPlot/: CMakeLists.txt
statistics/: BinomialCalculator.cpp  BinomialCalculator.h  CMakeLists.txt
